--- a/RecipeSocial.Interface.Web/Properties/launchSettings.json
+++ b/RecipeSocial.Interface.Web/Properties/launchSettings.json
@@ -1,10 +1,10 @@
 ﻿{
   "iisSettings": {
-    "windowsAuthentication": false, 
-    "anonymousAuthentication": true, 
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:58308",
-      "sslPort": 0
+      "applicationUrl": "http://localhost:53064",
+      "sslPort": 44379
     }
   },
   "profiles": {
@@ -18,7 +18,7 @@
     "RecipeSocial.Interface.Web": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5000",
+      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
