--- a/RecipeSocial.Infrastructure.Database/RecipeSocial.Infrastructure.Database.csproj
+++ b/RecipeSocial.Infrastructure.Database/RecipeSocial.Infrastructure.Database.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.1.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RecipeSocial.Domain\RecipeSocial.Domain.csproj" />
