--- a/RecipeSocial.Domain/RecipeSocial.Domain.csproj
+++ b/RecipeSocial.Domain/RecipeSocial.Domain.csproj
@@ -8,6 +8,7 @@
     <Folder Include="Entities\" />
     <Folder Include="Database\" />
     <Folder Include="Entities\Template\" />
+    <Folder Include="Services\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore" Version="2.1.2" />
