--- a/RecipeSocial.Infrastructure.Services/RecipeSocial.Infrastructure.Services.csproj
+++ b/RecipeSocial.Infrastructure.Services/RecipeSocial.Infrastructure.Services.csproj
@@ -4,4 +4,7 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RecipeSocial.Domain\RecipeSocial.Domain.csproj" />
+  </ItemGroup>
 </Project>
