--- a/RecipeSocial.Interface.Web/RecipeSocial.Interface.Web.csproj
+++ b/RecipeSocial.Interface.Web/RecipeSocial.Interface.Web.csproj
@@ -22,14 +22,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Views\Home\Index.cshtml" />
-    <None Include="Views\Users\Create.cshtml" />
-    <None Include="Views\Users\Delete.cshtml" />
-    <None Include="Views\Users\Details.cshtml" />
-    <None Include="Views\Users\Edit.cshtml" />
-    <None Include="Views\Users\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RecipeSocial.Infrastructure.Database\RecipeSocial.Infrastructure.Database.csproj" />
     <ProjectReference Include="..\RecipeSocial.Domain\RecipeSocial.Domain.csproj" />
+    <ProjectReference Include="..\RecipeSocial.Infrastructure.Services\RecipeSocial.Infrastructure.Services.csproj" />
   </ItemGroup>
 </Project>
