Revert "Comments and Merge"
This reverts commit be6ad2614326dfa9dc5fd24fc8ab53cf9f4ee2da, reversing
changes made to 504f2635a130b070673d77ba6f2ff14aae90242e.

--- a/RecipeSocial.Domain/RecipeSocial.Domain.csproj
+++ b/RecipeSocial.Domain/RecipeSocial.Domain.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <Folder Include="Entities\" />
+    <Folder Include="Database\" />
     <Folder Include="Entities\Template\" />
   </ItemGroup>
   <ItemGroup>
